services/firewalls/dmz2/config/iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# Pingi do firewalla
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT
-A INPUT -p icmp --icmp-type echo-reply -j ACCEPT

# Pingi między strefami
-A FORWARD -p icmp --icmp-type echo-request -j ACCEPT
-A FORWARD -p icmp --icmp-type echo-reply -j ACCEPT

# Reguły z tabeli 7
# HTTP/HTTPS
-A FORWARD -s 10.1.0.0/24 -d 10.2.2.0/24 -p tcp -m multiport --dports 80,443 -j ACCEPT  
# Syslog
-A FORWARD -s 10.2.2.0/24 -d 10.2.1.0/24 -p udp --dport 514 -j ACCEPT  
# Dostęp do aplikacji
-A FORWARD -s 10.3.0.0/24 -d 10.2.2.0/24 -p tcp -m multiport --dports 80,443 -j ACCEPT  
# Nessus
-A FORWARD -s 10.2.1.50 -d 10.2.2.0/24 -p tcp --dport 8834 -j ACCEPT
# Nessus - odpowiedź zwrotna
-A FORWARD -s 10.2.2.0/24 -d 10.2.1.50 -p tcp --dport 8834 -j ACCEPT

# Pozostały ruch
-A FORWARD -d 10.2.2.0/24 -j DROP
-A FORWARD -d 10.2.2.0/24 -j LOG --log-prefix "DMZ2_DROP: "


COMMIT
